--- a/encer.html
+++ b/encer.html
@@ -8,7 +8,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Trote solidário</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="encer.css"/>
   </head>
   <body>
     <div id="container">
@@ -27,23 +27,36 @@
 
         </span>
       </div>
-      <ul>
-        <li>
-          <a href="obj.html">Objetivos e Etapas</a>
-        </li>
-        <li>
-          <a href="equipes.html">Equipes</a>
-        </li>
-        <li>
-          <a href="#">Gincana</a>
-        </li>
-        <li>
-          <a href="integ.html">Integração</a>
-        </li>
-        <li>
-          <A href="encer.html">Encerramento</A>
-        </li>
-      </ul>
+      <hr noshade>• EQUIPES
+        <ul>
+          <li>- As equipes deverão trabalhar suas respectivas cores, na noite de encerramento do TROTE SOLIDÁRIO Uni-FACEF 2023, utilizando sua respectiva cor no vestuário e adereços</li>
+          <li>- Pontuação da ativade: 1.000 pontos</li>
+        </ul>
+      </hr>
+      <hr noshade>• APRESENTAÇÃO MUSICAL/CULTURAL
+        <ul>
+          <li>- Cada equipe deverá apresentar um número, com no máximo 4 minutos de duração. E para a realização dessa prova, cada equipe poderá utilizar recursos musicais e/ou teatrais</li>
+          <li>OBS: Caso a equipe exceda o tempo limite, previsto no Regulamento, ela será penalizada pela Organização</li>
+          <li>- Pontuação da ativade: 2.000 pontos</li>
+        </ul>
+      </hr>
+      <hr noshade>• MASCOTE DA EQUIPE
+        <ul>
+          <li>- Os alunos deverão pensar e criar um mascote para representa-los. Ainda, um integrante da equipe deverá se apresentar caracterizado como o personagem e será responsável pela animação da equipe durante a Gincana de Encerramento</li>
+          <li>- Pontuação da ativade: 1.000 pontos</li>
+        </ul> 
+      </hr>
+      <hr noshade>• QUIZ
+        <ul>
+          <li>- Cada equipe será representada por um Calouro e um Veterano, para participar de uma prova de perguntas e respostas. O tema será o Uni-FACEF</li>
+          <li>- Pontuação da ativade: 1.000 pontos</li>
+        </ul>
+      </hr>
+      <hr noshade>• PONTUAÇÃO EXTRA
+        <ul>
+          <li>- Na noite de encerramento do TROTE SOLIDÁRIO Uni-FACEF 2023, ocorrerão provas-surpresa e que valerão pontuação</li>
+        </ul>
+      </hr>
       <div id="social-links">
         <a href="https://github.com/ThullioF/Trote-Solidario" target="_blank">
          <ion-icon name="logo-github"></ion-icon>
