--- a/equipes.html
+++ b/equipes.html
@@ -8,7 +8,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Trote solidário</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="equipes.css"/>
   </head>
   <body>
     <div id="container">
@@ -28,22 +28,45 @@
         </span>
       </div>
       <ul>
-        <li>
-          <a href="obj.html">Objetivos e Etapas</a>
-        </li>
-        <li>
-          <a href="equipes.html">Equipes</a>
-        </li>
-        <li>
-          <a href="#">Gincana</a>
-        </li>
-        <li>
-          <a href="integ.html">Integração</a>
-        </li>
-        <li>
-          <A href="encer.html">Encerramento</A>
-        </li>
+        <div>
+          -> As equipes serão responsáveis pelo planejamento, arrecadação e
+          armazenamento dos itens aqui relacionados. A entrega dos alimentos, dos
+          suplementos alimentares, bem como dos comprovantes de realização das provas da
+          Doação de Sangue e da Ação Social, para fins de pontuação.
+        </div>
       </ul>
+      <table>
+        <tr>
+          <th>Equipes</th>
+          <th>Cursos</th>
+          <th>Alunos</th>
+        </tr>
+        <tr>
+          <td>Laranja</td>
+          <td>Administração Diurno / Administração Noturno / Comunicação Social</td>
+          <td>88</td>
+        </tr>
+        <tr>
+          <td>Vermelha</td>
+          <td>Ciência da Computação / Engenharia Civil / Engenharia de Produção / Sistemas de Informação</td>
+          <td>89</td>
+        </tr>
+        <tr>
+          <td>Roxa</td>
+          <td>Enfermagem / Medicina</td>
+          <td>84</td>
+        </tr>
+        <tr>
+          <td>Amarela</td>
+          <td>Ciências Contábeis / Engenharia de Software</td>
+          <td>84</td>
+        </tr>
+        <tr>
+          <td>Verde</td>
+          <td>Letras / Matemática / Psicologia</td>
+          <td>86</td>
+        </tr>
+      </table>
       <div id="social-links">
         <a href="https://github.com/ThullioF/Trote-Solidario" target="_blank">
          <ion-icon name="logo-github"></ion-icon>
