--- a/integ.html
+++ b/integ.html
@@ -8,7 +8,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Trote solidário</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="integ.css"/>
   </head>
   <body>
     <div id="container">
@@ -28,22 +28,44 @@
         </span>
       </div>
       <ul>
-        <li>
-          <a href="obj.html">Objetivos e Etapas</a>
-        </li>
-        <li>
-          <a href="equipes.html">Equipes</a>
-        </li>
-        <li>
-          <a href="#">Gincana</a>
-        </li>
-        <li>
-          <a href="integ.html">Integração</a>
-        </li>
-        <li>
-          <A href="encer.html">Encerramento</A>
-        </li>
+        <div>-> Esta atividade tem como objetivo principal levar os novos estudantes
+        universitários do Uni-FACEF a se aproximar dos programas sociais, buscando
+        conhecer seu trabalho, identificar as dificuldades enfrentadas no cenário atual e
+        desenvolver formas criativas de ajuda-los.</div>
       </ul>
+      <table>
+        <tr>
+          <th>Equipes</th>
+          <th>Entidades</th>
+        </tr>
+        <tr>
+          <td>Laranja</td>
+          <td>Lar de Idosos</td>
+        </tr>
+        <tr>
+          <td>Vermelha</td>
+          <td>Portadores de Necessidades Especiais</td>
+        </tr>
+        <tr>
+          <td>Roxa</td>
+          <td>Deficientes Visuais</td>
+        </tr>
+        <tr>
+          <td>Amarela</td>
+          <td>Creche</td>
+        </tr>
+        <tr>
+          <td>Verde</td>
+          <td>Pacientes com Câncer</td>
+        </tr>
+      </table>
+      <ul>
+        <li>✓ A ação deverá contar necessariamente com pelo menos:</li>
+        <li>- 10 membros da equipe;</li>
+        <li>- Um representante calouro de cada curso;</li>
+        <li>- Um representante veterano de cada curso.</li>
+      </ul>
+      <p>• PONTUAÇÃO DESTA ATIVIDADE = 2.000 pontos</p>
       <div id="social-links">
         <a href="https://github.com/ThullioF/Trote-Solidario" target="_blank">
          <ion-icon name="logo-github"></ion-icon>
