--- a/obj.html
+++ b/obj.html
@@ -8,7 +8,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Trote solidário</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="obj.css"/>
   </head>
   <body>
     <div id="container">
@@ -28,22 +28,31 @@
         </span>
       </div>
       <ul>
-        <li>
-          <a href="obj.html">Objetivos e Etapas</a>
-        </li>
-        <li>
-          <a href="equipes.html">Equipes</a>
-        </li>
-        <li>
-          <a href="#">Gincana</a>
-        </li>
-        <li>
-          <a href="integ.html">Integração</a>
-        </li>
-        <li>
-          <A href="encer.html">Encerramento</A>
-        </li>
+        <div>-> O objetivo do TROTE SOLIDÁRIO Uni-FACEF 2023 é integrar os
+       estudantes dos primeiros períodos de 2023 à comunidade acadêmica do Uni-FACEF,
+       com ações que demonstram a solidariedade para com a sociedade.</div>
       </ul>
+      <table>
+        <tr>
+          <th>1ª ETAPA</th>
+          <th>GINCANA SOLIDÁRIA DE ARRECADAÇÃO
+            <ul>
+              <li>• Alimentos e suplementos - Metas por equipe</li>
+              <li>• Alimentos e suplementos - Adicionais</li>
+              <li>• Doação de sangue - Facultativa</li>
+            </ul>
+          </th>
+        </tr>
+        <tr>
+          <th>2ª ETAPA</th>
+          <th>INTEGRAÇÃO E ENVOLVIMENTO
+            <ul>
+              <li>• Ação em entidades sociais da cidade</li>
+              <li>• Encerramento - Atividaes recreativas</li>
+            </ul>
+          </th>
+        </tr>
+      </table>
       <div id="social-links">
         <a href="https://github.com/ThullioF/Trote-Solidario" target="_blank">
          <ion-icon name="logo-github"></ion-icon>
