--- a/kits.html
+++ b/kits.html
@@ -27,6 +27,31 @@
 
         </span>
       </div>
+      <ul>
+      <h3>ALIMENTOS E SUPLEMENTOS – METAS POR EQUIPE</h3>
+      </ul>
+      <table>
+        <tr>
+          <th>SUPLEMENTOS ALIMENTARES</th>
+          <th>• Lata de 400 gramas, adulto, sabor baunilha, das marcas
+            <ul>
+              <li>- Ensure</li>
+              <li>- Nutren 1.0</li>
+            </ul>
+          </th>
+        </tr>
+        <tr>
+          <th>KITS ALIMENTAÇÃO</th>
+          <th>• Deve conter necessariamente
+            <ul>
+              <li>- 2 pacotes de 5kg de arroz - tipo 1</li>
+              <li>- 2 pacotes de 2kg (ou 4 pacotes de 1kg) de feijão - tipo carioca</li>
+              <li>- 3 unidades óleo de soja (1 litro ou 900ml cada)</li>
+              <li>- 6 pacotes de macarrão de ½ kg (ou 3 pacotes de 1 Kg)</li>
+            </ul>
+          </th>
+        </tr>
+      </table>
       <div id="kit">
             <div> 
                 Informe a quantidade de kits entregues <input type="number" id="kits"/>
@@ -43,19 +68,15 @@
         <a href="https://github.com/ThullioF/Trote-Solidario" target="_blank">
          <ion-icon name="logo-github"></ion-icon>
         </a>
-
         <a href="https://www.instagram.com/unifacef/" target="_blank">
          <ion-icon name="logo-instagram"></ion-icon>
         </a>
-
         <a href="https://www.youtube.com/@tvunifacef" target="_blank">
          <ion-icon name="logo-youtube"></ion-icon>
         </a>
-
         <a href="https://www.linkedin.com/school/uni-facef/" target="_blank">
          <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-
       </div>
       <footer>
         Desenvolvido por Thúllio A. Ferreira / <a href="https://www.unifacef.com.br">Unifacef</a>
