--- a/gincana.html
+++ b/gincana.html
@@ -29,21 +29,14 @@
       </div>
       <ul>
         <li>
-          <a href="obj.html">Objetivos e Etapas</a>
+          <a href="kits.html">ALIMENTOS E SUPLEMENTOS – METAS POR EQUIPE</a>
         </li>
         <li>
-          <a href="equipes.html">Equipes</a>
+          <a href="#">ALIMENTOS E SUPLEMENTOS – ADICIONAIS</a>
         </li>
         <li>
-          <a href="gincana.html">Gincana</a>
+          <a href="doacao.html">DOAÇÃO DE SANGUE – PONTUAÇÃO FACULTATIVA</a>
         </li>
-        <li>
-          <a href="integ.html">Integração</a>
-        </li>
-        <li>
-          <A href="encer.html">Encerramento</A>
-        </li>
-      </ul>
       <div id="social-links">
         <a href="https://github.com/ThullioF/Trote-Solidario" target="_blank">
          <ion-icon name="logo-github"></ion-icon>
