--- a/gincana.html
+++ b/gincana.html
@@ -32,7 +32,7 @@
           <a href="kits.html">ALIMENTOS E SUPLEMENTOS – METAS POR EQUIPE</a>
         </li>
         <li>
-          <a href="#">ALIMENTOS E SUPLEMENTOS – ADICIONAIS</a>
+          <a href="avulsos.html">ALIMENTOS E SUPLEMENTOS – ADICIONAIS</a>
         </li>
         <li>
           <a href="doacao.html">DOAÇÃO DE SANGUE – PONTUAÇÃO FACULTATIVA</a>
