--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       </div>
       <footer>
-        Desenvolvido por Thúllio A. Ferreira / <a href="https://www.unifacef.com.br">Unifacef</a>
+        Desenvolvido por Thúllio A. Ferreira, Gabriel Texeira Rocha, Gabriel Rodrigues Carbone, Pedro Henrique Bassi Borges, João Pedro Raiz, Rodrigo Alvez Rodrigues / <a href="https://www.unifacef.com.br">Unifacef</a>
       </footer>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
